Add skeleton JS files and add mockup HTML/css

--- a/src/template.html
+++ b/src/template.html
@@ -8,11 +8,31 @@
 <body>
     <header>
         <div id="content"> 
-            <nav> Home</nav>
-            <nav> Menu</nav>
-            <nav> About</nav>
+            <div class="content-block"> 
+                <div class="navbar">
+                    <button> Home</button>
+                    <button> Menu</button>
+                    <button> About</button>
+                </div>
+
+                <div class="content-body"> 
+                    <div class="headline"> Vooni's Drive in Burgers and Fries</div>
+
+
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTX_eA8ZErtv5Za3B6mQiuxFS89D-JhFQ9ngQ&s"> 
+
+                    <div class="paragraph-body"> 
+                        At Vooni's Burgers and Fries, we pride ourselves in providing delicious, fresh, and affordable 
+                        meals to the community for people from all backgrounds to enjoy.
+                    </div>
+                </div> 
+            </div>
+
+            
+
         </div>
     </header>
     
 </body>
+
 </html>
