Add menu page render function

--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <div id="content"> 
-            <div class="content-block"> 
+            <!-- <div class="content-block"> 
                 <div class="navbar">
                     <button> Home</button>
                     <button> Menu</button>
@@ -26,7 +26,60 @@
                         meals to the community for people from all backgrounds to enjoy.
                     </div>
                 </div> 
-            </div>
+            </div> -->
+
+            <!-- ++++++ -->
+
+            <!-- <div class="content-block"> 
+                <div class="navbar">
+                    <button> Home</button>
+                    <button> Menu</button>
+                    <button> About</button>
+                </div>
+
+                <div class="content-body"> 
+                    <div class="headline">
+                        <h2>Menu</h2> </div>
+
+                    <div class="burgers"> 
+                        <h3>Burgers </h3>
+                        <div> House Special Burg</div>
+                        <div> Beetroot Veggie Burg</div>
+                        <div> Spicy Crispy Chicken Deluxe</div>
+
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTX_eA8ZErtv5Za3B6mQiuxFS89D-JhFQ9ngQ&s"> 
+
+                    </div>
+
+                    <div class="sides"> 
+                        <h3>Sides </h3>
+                        <div> Fries</div>
+                        <div> Sweet Potato Fries </div>
+                        <div> Onion Rings</div>
+                        <div> Burger 4</div>
+
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTX_eA8ZErtv5Za3B6mQiuxFS89D-JhFQ9ngQ&s"> 
+
+                    </div>
+
+                    <div class="drinks"> 
+                        <h3>Drinks </h3>
+                        <div> Cola</div>
+                        <div> Rootbeer</div>
+                        <div> Lemonade</div>
+                        <div> Vanilla Shake </div>
+                        <div> Chocolate Shake </div>
+
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTX_eA8ZErtv5Za3B6mQiuxFS89D-JhFQ9ngQ&s"> 
+
+                    </div>
+
+                    <div class="paragraph-body"> 
+                        At Vooni's Burgers and Fries, we pride ourselves in providing delicious, fresh, and affordable 
+                        meals to the community for people from all backgrounds to enjoy.
+                    </div>
+                </div> 
+            </div> -->
 
             
 
